@@ -16,7 +16,6 @@
 #   along with LibTMCG; if not, write to the Free Software
 #   Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 
-
 EXTRA_DIST = libTMCG-config.in libTMCG.m4
 
 bin_SCRIPTS = libTMCG-config
@@ -87,11 +86,14 @@ libTMCG_la_SOURCES = mpz_srandom.c mpz_srandom.h\
 	TMCG_PublicKeyRing.hh\
 	libTMCG.cc libTMCG.hh
 
-libTMCG_la_CFLAGS = @LIBGCRYPT_CFLAGS@ @GPG_ERROR_CFLAGS@ @LIBGMP_CFLAGS@
+libTMCG_la_CFLAGS = @LIBGCRYPT_CFLAGS@ @GPG_ERROR_CFLAGS@ @LIBGMP_CFLAGS@\
+ @BOTAN_CFLAGS@
 
-libTMCG_la_CXXFLAGS = @LIBGCRYPT_CFLAGS@ @GPG_ERROR_CFLAGS@ @LIBGMP_CFLAGS@
+libTMCG_la_CXXFLAGS = @LIBGCRYPT_CFLAGS@ @GPG_ERROR_CFLAGS@ @LIBGMP_CFLAGS@\
+ @BOTAN_CFLAGS@
 
 libTMCG_la_LDFLAGS = -version-info\
 	@LIBTMCG_LT_CURRENT@:@LIBTMCG_LT_REVISION@:@LIBTMCG_LT_AGE@
 
-libTMCG_la_LIBADD = @LIBGCRYPT_LIBS@ @GPG_ERROR_LIBS@ @LIBGMP_LIBS@
+libTMCG_la_LIBADD = @LIBGCRYPT_LIBS@ @GPG_ERROR_LIBS@ @LIBGMP_LIBS@ @BOTAN_LIBS@
+
